Fix CI: skip pandoc check to avoid pak resolution failure

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -37,6 +37,7 @@ jobs:
         with:
           extra-packages: any::rcmdcheck, R4SUB/r4subcore, R4SUB/r4subscore, R4SUB/r4subrisk, R4SUB/r4subtrace
           needs: check
+          install-pandoc: 'false'
 
       - uses: r-lib/actions/check-r-package@v2
         with:
